[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.62",
    "langgraph-sdk>=0.1.51",
    "langgraph-checkpoint-sqlite>=2.0.2",
    "langsmith>=0.2.10",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.3.0",
    "notebook>=7.3.2",
    "tavily-python>=0.5.0",
    "wikipedia>=1.4.0",
    "trustcall>=0.0.26",
    "langgraph-cli>=0.1.67",
]
